testdata/baselines/reference/submodule/compiler/jsSelfReferencingArgumentsFunction.errors.txt
foo.js(4,12): error TS2350: Only a void function can be called with the 'new' keyword.


==== foo.js (1 errors) ====
    // Test #16139
    function Foo() {
        arguments;
        return new Foo();
               ~~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.
    }
    